Offer repositories and histogram module. Closes #3, closes #7